# article_processor

./: .sourcery.yaml
.devcontainer/: devcontainer.json
src/: debugging.py
src/article_processor_dknit/: old_setup.py  pyproject.toml
src/article_processor_dknit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/article_processor_dknit/ingest/: backend.py  debugging.py  messageq.py  messageq_test.py  models.py  persistence.py  processor.py  shutdownwatcher.py  shutdownwatcher_test.py
src/article_processor_dknit/ingestion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ingest/: models.py  processor.py
