[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestion"
version = "0.1.0"
authors = [
    {name = "dknit", email = "youremail@example.com"},  # Replace with your actual email
]
description = "python explorations."
# readme = "README.rst"  # Uncomment and provide a README file if you have one
requires-python = ">=3.7"  # Modify if you have a different Python version requirement
# keywords = ["one", "two"]  # Uncomment and provide relevant keywords if needed
# license = {text = "Your-License"}  # Uncomment and specify your license if you have one
# classifiers = [  # Uncomment and modify classifiers to suit your project
#     "Framework :: Django",
#     "Programming Language :: Python :: 3",
# ]
dependencies = [
    "fastapi==0.58.0",
    "google-cloud-firestore==2.7.0",
    "pydantic==1.5.1",
    "uvicorn==0.11.7",
    "gunicorn==20.0.4",
    "passlib==1.7.2",
    "bcrypt==3.1.7",
    "PyJWT==1.7.1",
    "spacy==2.3.2",
    "spacy-lookups-data==0.3.2",
    "typer==0.3.0",
    "httpx==0.13.3",
    "supervisor==4.2.0",
]
# dynamic = ["version"]  # Uncomment if your project uses dynamic versioning

[project.optional-dependencies]
dev = [
    "pytest==5.4.3",
]
web = [
    "wordcloud==1.7.0",
    "falcon==2.0.0",
    "google-cloud-storage==1.29.0",
]

[project.scripts]
ingestiond = "ingest.backend:main"
getdataset = "simulator.download:download_and_extract"
uploaddataset = "simulator.upload:main"
